changement de background image , recadrage de la div row , aggrandissement input search

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,6 +16,12 @@
         {% block javascripts %}
             {% block importmap %}{{ importmap('app') }}{% endblock %}
         {% endblock %}
+
+        <style>
+    .text-shadow {
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+    }
+</style>
     </head>
     <body>
         {{ include('components/FrontNavbar.html.twig') }}
