--- a/templates/components/FrontNavbar.html.twig
+++ b/templates/components/FrontNavbar.html.twig
@@ -13,8 +13,8 @@
 					<li>
                     <button class="btn  btn-{% if app.user %}dark{% else %}warning{% endif %}">
 
-						<i class="bi bi-person"></i>
-						<span>{% if app.user %} Déc{% else %} C{% endif %}onnexion</span>
+						
+						<span>{% if app.user %} Déc{% else %} <i class="bi bi-person"></i> C{% endif %}onnexion</span>
 					</button>
                     </li>
 				</a>
