--- a/templates/components/SearchRoom.html.twig
+++ b/templates/components/SearchRoom.html.twig
@@ -143,7 +143,7 @@
 
 
 		<div class="room__filter--search">
-			<input type="text" data-model="query" name="" id="" placeholder="Votre recherche ">
+			<input type="text" data-model="query" name="" id="" placeholder="  Votre recherche " style="width: 500px">
 			{# <p>Résultat:
 				{{ this.Rooms ? this.Rooms|length : "0" }}</p> #}
 
