vérification disponibilité des dates lors d'une réservation

--- a/templates/room/show.html.twig
+++ b/templates/room/show.html.twig
@@ -79,6 +79,12 @@
                </div>
             {% endfor %}
 
+            {% for message in app.flashes('error') %}
+               <div class="alert alert-danger">
+                  {{ message }}
+               </div>
+            {% endfor %}
+
             {{ form_start(BookingForm) }}
                <input type="hidden" name="token" value="{{ csrf_token('new_booking') }}">
                <div class="room__content--group">
