--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -13,6 +13,11 @@
             {% if error %}
                 <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
             {% endif %}
+            {% for message in app.flashes('success') %}
+               <div class="alert alert-success">
+                  {{ message }}
+               </div>
+            {% endfor %}
 
             {% if app.user %}
                 <div class="mb-3">
