--- a/assets/styles/sass/style.scss
+++ b/assets/styles/sass/style.scss
@@ -444,11 +444,20 @@ header{
             }
         }
         &--notification{
-            
+            p{
+                font-size: 0.9em;
+            }
             img{
                 width: 150px;
                 height: 150px;
                 object-fit: cover;
+            }
+        }
+        .disable{
+            background-color: #e9e9e9b8 !important;
+            color: rgba(128, 128, 128, 0.7) !important;
+            img{
+                filter: grayscale(100%);
             }
         }
     }
