--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -7,6 +7,13 @@
     {{ include('./components/partials/profileMenu.html.twig') }}
     <div class="profile__content">
         <h1 class="text-center w-100">Bienvenue <span>{{ app.user.firstName | default('Utilisateur') }} {{ app.user.lastName|upper | default('Inconnu') }}</span></h1>
+        <div class="text-center">
+            {% for message in app.flashes('success') %}
+               <div class="alert alert-success">
+                  {{ message }}
+               </div>
+            {% endfor %}
+        </div>
         <div class="row mt-5 w-100 justify-content-between">
             <div class="col-12 col-lg-3 m-2 p-4 border rounded">
                 <h6>Dérnières notifications</h6>
