--- a/templates/profile/notification.html.twig
+++ b/templates/profile/notification.html.twig
@@ -9,17 +9,25 @@
 		<div class="profile__content">
 			<h1 class="text-center w-100">Mes notifications</h1>
 			<div class="row">
-			{% for notif in notifications %}
-			<div class="col-12 col-lg-6 p-2 profile__content--notification">
-				<div class="border border-{{ notif.label }} rounded d-flex gap-1">
-                    <img src="{{ vich_uploader_asset(notif.bookingId.roomId.getFirstImage(), 'imageFile') }}" alt="Image de la salle">
-                    <div class="my-auto p-2">
-						<h6>{{ notif.title }}</h6>
-						<p>{{ notif.content }}</p>         
+				{% set processedBookings = [] %}
+				{% for notif in notifications %}
+					<div class="col-12 col-lg-6 p-2 profile__content--notification ">
+						{% if notif.bookingId.id not in processedBookings %}
+							{# Si c'est la première notification pour cette réservation, l'ajouter au tableau #}
+							{% set processedBookings = processedBookings|merge([notif.bookingId.id]) %}
+							<div class="border border-{{ notif.label }} rounded d-flex gap-1">
+						{% else %}
+							<div class="border border-{{ notif.label }} rounded d-flex gap-1 disable">
+						{% endif %}
+								<img src="{{ vich_uploader_asset(notif.bookingId.roomId.getFirstImage(), 'imageFile') }}" alt="Image de la salle">
+								<div class="my-auto p-2">
+									<h6>{{ notif.title }}</h6>
+									<p class="mb-1">{{ notif.content }}</p>
+									<p class="mb-0 text-end font-size-sm w-100"><i><small>Du {{ notif.bookingId.checkInAt|date('d/m/Y') }} au {{ notif.bookingId.checkOutAt|date('d/m/Y') }}.</small></i></p>
+								</div>
+							</div>
 					</div>
-                </div>
-			</div>
-			{% endfor %}
+				{% endfor %}
 			</div>
 		</div>
 	</main>
