recherche optimiser capacité max min et ville

--- a/templates/components/SearchRoom.html.twig
+++ b/templates/components/SearchRoom.html.twig
@@ -31,8 +31,8 @@
 				</h2>
 				<div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionFilter">
 					<div class="accordion-body">
-                        <input type="text" min="30" data-model="capacityMin" name="" id="" placeholder="30">
-                        <input type="text" data-model="capacityMax" name="" id="" placeholder="450">
+                       <input type="number" min="30" data-model="capacityMin" name="capacityMin" id="" placeholder="30">
+<input type="number" data-model="capacityMax" name="capacityMax" id="" placeholder="450">
 
 						{# <form action="" method="get" class="room__filter--form">
 							<div class="room__filter--group">
