--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -30,12 +30,12 @@
 			<form action="{{ path('app_room')}}" method="GET">
 			
 					<div class="home__form--group">
-						<label for="checkin">Date d'entrée</label>
-						<input type="date" name="checkin" id="checkin">
+						<label for="checkIn">Date d'entrée</label>
+						<input type="date" name="checkIn" id="checkin">
 					</div>
 					<div class="home__form--group">
-						<label for="checkout">Date de sortie</label>
-						<input type="date" name="checkout" id="checkout">
+						<label for="checkOut">Date de sortie</label>
+						<input type="date" name="checkOut" id="checkout">
 					</div>
 					<div class="">
 						<button type="submit" class="btn btn-warning rounded-5">
